# pdflib-extended

./: __init__.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  tests.yml
src/pdflib_extended/: __init__.py  exceptions.py  pdflib.py  tetlib.py
src/pdflib_extended/core/: pdflib_base.py  pdflib_py.pyi  tetlib_base.py
src/pdflib_extended/extensions/: barcodes.py  classes.py  contexts.py  shapes.py  text.py
src/pdflib_extended/utils/: contexts.py
tests/: conftest.py  test_barcodes.py  test_blocks.py  test_contexts.py  test_shapes.py  test_tetlib.py  test_text.py
