[tool.poetry]
name = "pdflib-extended"
version = "0.1.0"
description = ""
authors = ["RichardS <richards@eoshost.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
pylibdmtx = "^0.1.10"
pillow = "^10.3.0"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
