[tool.poetry]
name = "pdflib-extended"
version = "0.1.0"
description = ""
authors = ["RichardS <richards@eoshost.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylibdmtx = "^0.1.10"
pillow = "^10.3.0"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
setuptools = "^70.0.0"
pytest = "^8.2.1"
pytest-datadir = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
