[metadata]
name = pdflib_extended
description = Extension of the PDFlib module.
author = Richard Smith
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    pdflib_extended
install_requires =
    pylibdmtx>=0.1.10
    pillow>=10.3.0
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pdflib_extended = py.typed

[flake8]
max-line-length = 88
exclude = src/pdflib_extended/core/pdflib_base.py
